darkmode.css
/*when not in dark mode*/
.darked, .darked button, .darked textarea, .darked div {
	background-color: black;
	color: white;
}

.darked button {
    border: 1px solid lightgray;
}

.darked a {
	color: #00e4ff;
}

.darked a:visited {
	color: #00e4ff;
}

.darked .profile-category::-webkit-scrollbar-thumb {
  background: white;
}
.darked .profile-category::-webkit-scrollbar-track {
  background: #444444;
}

#darkmode {
	-webkit-user-select: none; 
	-ms-user-select: none; 
	user-select: none; 
}

/*if dark mode available*/
@media (prefers-color-scheme: dark) {
	html, div {
		background-color: black;
		color: white;
	}
	a {
		color: #00e4ff;
	}
	a:visited {
		color: #00e4ff;
	}
	button {
		background-color: black;
		color: white;
		border: 1px solid lightgray;
	}	

	.darked, .darked button, .darked textarea, .darked div {
		background-color: white;
		color: black;
	}		
	.darked a {
		color: rgb(0, 0, 238);
	}

	.darked a:visited {
		color: rgb(85, 26, 139);
	}
}

/*
html {
	transition: color 500ms, background-color 500ms;
	background-color: white;
}

.darked {
	filter: invert(1);
}

.darked img {
	filter: invert(1);
}*/

